--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <h2> Verify Account</h2>
         <p>We emailed you the six digit code to
-          cool_guy@gmail.com <br/> Enter the code below to
+          Jyoti_Suhag@gmail.com <br/> Enter the code below to
           confirm your email address
         </p>
         <div class="code-container">
